...
    }
  }

  @override
  Widget build(BuildContext context) {
    return HmScaffold(
      title: 'Book a viewing',
      backgroundColor: HmColors.bgPrimary,
      body: ListView(
        children: [
          HmInlineError(_error),

          const Text('Pick a day', style: HmText.label),
...
